fix lgtm